@@ -11272,7 +11272,7 @@ tsubst (tree t, tree args, tsubst_flags_t complain, tree in_decl)
   enum tree_code code;
   tree type, r = NULL_TREE;
 
-  if (t == NULL_TREE
+  if (t == NULL_TREE || t == error_mark_node
       || t == integer_type_node
       || t == void_type_node
       || t == char_type_node
@@ -11280,9 +11280,6 @@ tsubst (tree t, tree args, tsubst_flags_t complain, tree in_decl)
       || TREE_CODE (t) == NAMESPACE_DECL
       || TREE_CODE (t) == TRANSLATION_UNIT_DECL)
     return t;
-
-  if (error_operand_p (t))
-    return error_mark_node;
 
   if (DECL_P (t))
     return tsubst_decl (t, args, complain);
