@@ -1,3 +1,12 @@
+2013-10-08  Paolo Carlini  <paolo.carlini@oracle.com>
+
+	PR c++/58665
+	Revert:
+	2013-10-04  Paolo Carlini  <paolo.carlini@oracle.com>
+
+	PR c++/58448
+	* g++.dg/template/crash117.C: New.
+
 2013-10-08  Andreas Krebbel  <Andreas.Krebbel@de.ibm.com>
 
 	* gcc.target/s390/htm-nofloat-2.c: Add -mzarch to asm options.
